objects/project_cloud__Board__c.object
<CustomObject>
    <fields>
        <fullName>project_cloud__Board_Process__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Board Process utilized by this Board</inlineHelpText>
        <label>Board Process</label>
        <referenceTo>project_cloud__Board_Process__c</referenceTo>
        <relationshipLabel>Boards</relationshipLabel>
        <relationshipName>Boards</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Card_Count__c</fullName>
        <description>A Count of the number of Cards on the Board</description>
        <label>Total Card Count</label>
        <summaryForeignKey>project_cloud__Card__c.project_cloud__Board__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Card_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Completed Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Completed_Percent__c</fullName>
        <formula>IF(project_cloud__Card_Count__c == project_cloud__On_Hold_Card_Count__c, 0, project_cloud__Completed_Card_Count__c / (project_cloud__Card_Count__c - project_cloud__On_Hold_Card_Count__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Completion (%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>project_cloud__End__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Project_Phase__c), null, project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Autonomous_End__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Estimated_Hours__c</fullName>
        <inlineHelpText>Shows a rollup summary of Estimated Hours on cards under the board.</inlineHelpText>
        <label>Estimated Hours</label>
        <summarizedField>project_cloud__Card__c.project_cloud__Estimated_Hours__c</summarizedField>
        <summaryForeignKey>project_cloud__Card__c.project_cloud__Board__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>project_cloud__On_Hold_Card_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total On Hold Card Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>project_cloud__Project_Phase__c</referenceTo>
        <relationshipLabel>Boards</relationshipLabel>
        <relationshipName>Boards</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>project_cloud__Start__c</fullName>
        <formula>IF(ISBLANK(project_cloud__Project_Phase__c), null, project_cloud__Project_Phase__r.project_cloud__Project__r.project_cloud__Autonomous_Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Calculated Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>project_cloud__Worked_Hours__c</fullName>
        <inlineHelpText>This field will capture the amount of hours a user has entered against the Board.</inlineHelpText>
        <label>Entered Hours</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Board</label>
    <nameField>
        <label>Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>project_cloud__Board_Member__c</fullName>
        <label>Board Member</label>
    </sharingReasons>
</CustomObject>